--- a/doorbell_pkg.yaml
+++ b/doorbell_pkg.yaml
@@ -1,5 +1,7 @@
 input_text:
   last_front_door_time:
     name: "Last Front Door Time"
+    initial: 00:00:00
   last_side_door_time:
     name: "Last Side Door Time"
+    initial: 00:00:00
